chore(ci): always use stable node pool to increase reliability
Related to SRE-391